unpackaged/main/default/objects/Pago_Aplicado__c/Pago_Aplicado__c.object-meta.xml
<CustomObject>
    <label>Pago Aplicado</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pagos Aplicados</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>