unpackaged/main/default/objects/Pago_Aplicado__c/fields/Aplicacion_de_pago__c.field-meta.xml
<CustomField>
    <fullName>Aplicacion_de_pago__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Aplicación de pago</label>
    <referenceTo>Aplicacion_Pago__c</referenceTo>
    <relationshipLabel>Pagos Aplicados</relationshipLabel>
    <relationshipName>Pagos_Aplicados</relationshipName>
    <type>Lookup</type>
</CustomField>