unpackaged/main/default/objects/Pago_Aplicado__c/fields/Documento__c.field-meta.xml
<CustomField>
    <fullName>Documento__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Documento</label>
    <referenceTo>Documento__c</referenceTo>
    <relationshipLabel>Pagos Aplicados</relationshipLabel>
    <relationshipName>Pagos_Aplicados</relationshipName>
    <type>Lookup</type>
</CustomField>