unpackaged/main/default/objects/Pago_Aplicado__c/fields/IdAplicacionAR__c.field-meta.xml
<CustomField>
    <fullName>IdAplicacionAR__c</fullName>
    <label>IdAplicacionAR</label>
    <length>30</length>
    <type>Text</type>
</CustomField>