unpackaged/main/default/objects/Pago_Aplicado__c/fields/IdClienteAR__c.field-meta.xml
<CustomField>
    <fullName>IdClienteAR__c</fullName>
    <label>IdClienteAR</label>
    <length>30</length>
    <type>Text</type>
</CustomField>