unpackaged/main/default/objects/Pago_Aplicado__c/fields/IdFacturaAr__c.field-meta.xml
<CustomField>
    <fullName>IdFacturaAr__c</fullName>
    <label>IdFacturaAR</label>
    <length>30</length>
    <type>Text</type>
</CustomField>