unpackaged/main/default/objects/Pago_Aplicado__c/fields/IdNotaCredAR__c.field-meta.xml
<CustomField>
    <fullName>IdNotaCredAR__c</fullName>
    <label>IdNotaCredAR</label>
    <length>30</length>
    <type>Text</type>
</CustomField>