unpackaged/main/default/objects/Pago_Aplicado__c/fields/IdProcesoAR__c.field-meta.xml
<CustomField>
    <fullName>IdProcesoAR__c</fullName>
    <label>IdProcesoAR</label>
    <length>30</length>
    <type>Text</type>
</CustomField>