unpackaged/main/default/objects/Pago_Aplicado__c/fields/IdReciboAR__c.field-meta.xml
<CustomField>
    <fullName>IdReciboAR__c</fullName>
    <label>IdReciboAR</label>
    <length>30</length>
    <type>Text</type>
</CustomField>