unpackaged/main/default/objects/Pago_Aplicado__c/fields/Importe_a_Cuenta__c.field-meta.xml
<CustomField>
    <fullName>Importe_a_Cuenta__c</fullName>
    <label>Importe a Cuenta</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>