unpackaged/main/default/objects/Pago_Aplicado__c/fields/Importe_Funcional__c.field-meta.xml
<CustomField>
    <fullName>Importe_Funcional__c</fullName>
    <label>Importe Funcional</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>