unpackaged/main/default/objects/Pago_Aplicado__c/fields/Importe_Reclamo__c.field-meta.xml
<CustomField>
    <fullName>Importe_Reclamo__c</fullName>
    <label>Importe Reclamo</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>