unpackaged/main/default/objects/Pago_Aplicado__c/fields/Pago__c.field-meta.xml
<CustomField>
    <fullName>Pago__c</fullName>
    <label>Pago</label>
    <referenceTo>Pago__c</referenceTo>
    <relationshipLabel>Pagos Aplicados</relationshipLabel>
    <relationshipName>Pagos_Aplicados</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>